--- a/faq-accordion-card-main/styles.css
+++ b/faq-accordion-card-main/styles.css
@@ -22,13 +22,14 @@ body {
 
 .attribution {
   text-align: center;
-  padding-top: 3rem;
+  padding: 2rem 0;
 }
 
 @media only screen and (max-width: 900px) {
   .card {
     flex-direction: column;
     max-height: 100%;
+    margin-top: 8rem;
   }
 }
 .accordion__content, .accordion__label {
